--- a/Tarea 6. Prácticas con HTML/Practica5-Francisco_José_Zea.HTML
+++ b/Tarea 6. Prácticas con HTML/Practica5-Francisco_José_Zea.HTML
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P-5</title>
 </head>
-<body>
+<body style="background-color: #497AA6;">
  
-    <table width=100% border=2>
+    <table width=100% border=2 bordercolor="#030A8C" style="color: #ffffff; font-size: large ">
 
-        <caption>MODELOS DE FORD</caption>
+        <caption style="font-weight: bold; font-size: x-large; color: #ffffff;">-- MODELOS DE FORD --</caption>
 
         <tr>
             <td align="center">MUSTANG</td>
@@ -21,11 +21,11 @@
         </tr>
 
         <tr>
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Mustang"><img src="Fotos/mustang.jpg" alt="transit" width="370px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Fiesta"><img src="Fotos/fiesta.jpg" alt="transit" width="370px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Focus"><img src="Fotos/focus.jpg" alt="transit" width="350px" height="230px"></a></td>
         </tr>
 
         <tr>
@@ -37,27 +37,27 @@
         </tr>
 
         <tr>
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Mondeo"><img src="Fotos/mondeo.jpg" alt="transit" width="370px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://en.wikipedia.org/wiki/Ford_Puma"><img src="Fotos/puma.jpg" alt="transit" width="370px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Kuga"><img src="Fotos/kuga.jpg" alt="transit" width="320px" height="230px"></a></td>
         </tr>
 
         <tr>
+            <td align="center">FUSION</td>
+
             <td align="center">F-150</td>
 
             <td align="center">TRANSIT</td>
-
-            <td align="center">TOURNEO</td>
         </tr>
 
         <tr>
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Fusion_(Europa)"><img src="Fotos/fusion.jpg" alt="transit" width="370px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_F-150"><img src="Fotos/f150.jpg" alt="transit" width="320px" height="230px"></a></td>
 
-            <td align="center">k</td>
+            <td align="center"><a href="https://es.wikipedia.org/wiki/Ford_Transit_Connect"><img src="Fotos/transit.jpg" alt="transit" width="310px" height="230px"></a></td>
         </tr>
         
     </table>
