--- a/Puebaa/p.html
+++ b/Puebaa/p.html
@@ -13,9 +13,23 @@
      <div class="container-fluid">
          <div class="container">
             <div class="row">
-
-                
-
+                <div class="col-4 bg-primary">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur libero molestias eveniet culpa maxime mollitia! Eaque nemo possimus provident, error tenetur est ipsam, corporis nihil, aut sapiente nisi culpa tempore!
+                </div>
+                <div class="col-4 bg-primary">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur libero molestias eveniet culpa maxime mollitia! Eaque nemo possimus provident, error tenetur est ipsam, corporis nihil, aut sapiente nisi culpa tempore!
+                </div>
+                <div class="col-4 bg-primary">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur libero molestias eveniet culpa maxime mollitia! Eaque nemo possimus provident, error tenetur est ipsam, corporis nihil, aut sapiente nisi culpa tempore!
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 bg-primary">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur libero molestias eveniet culpa maxime mollitia! Eaque nemo possimus provident, error tenetur est ipsam, corporis nihil, aut sapiente nisi culpa tempore!
+                </div>
+                <div class="col-6 bg-primary">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur libero molestias eveniet culpa maxime mollitia! Eaque nemo possimus provident, error tenetur est ipsam, corporis nihil, aut sapiente nisi culpa tempore!
+                </div>
             </div>
          </div>
      </div>
