--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -15,11 +15,11 @@
 
     <div id="container">    
         <div id="conte1">
-            <a id="texto_inicio" href="inicio.html">Francisco José Zea Guerrero</a>
+            <a id="texto_inicio" href="portafolio.html">Francisco José Zea Guerrero</a>
         </div>
 
         <div id="conte2">
-            <a id="texto_inicio" href="inicio.html">Bienvenido a mi portafolio</a>
+            <a id="texto_inicio" href="portafolio.html">Bienvenido a mi portafolio</a>
         </div>
     </div>
     
