--- a/Portafolio/Pag1portafolio.html
+++ b/Portafolio/Pag1portafolio.html
@@ -6,21 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+  
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos_mobile.css">
+  
   <title>Portafolio-Francisco José</title>
 </head>
 <body>
   <header>
-    <nav id="navbar">
-        <div class="container">
-          <h1 class="logo"><a href="index.html"><img class="logo" src="logob1.png" alt="logob1"></a></h1>
-          <ul id="main-nav" class="txt-btn">
-              <li><a class="current" href="inicio.html">Portafolio</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <img id="logo" src="logob1.png" alt="logob1">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>   
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li> 
+        </ul>
+      </div>  
+    </nav>
 
     <div id="cabecera-p1"></div>
 
@@ -30,13 +47,13 @@
 
     <div class="container">
 
-      <div class="box-portfolio">
+      <div class="apartado-portfolio">
         <h4>Project Description</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit obcaecati, hic delectus voluptatibus at velit perspiciatis iusto tenetur odit sunt nulla illum placeat officia incidunt culpa non maxime aliquid. Magni pariatur laborum amet magnam totam, eum esse fugit autem perferendis.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae commodi laborum cumque ipsa rem voluptas nobis optio sapiente?</p>
       </div>
 
-      <div class="box-portfolio">
+      <div class="apartado-portfolio">
 
         <h4>Project Info</h4>
         <ul>
@@ -48,14 +65,17 @@
 
       </div>
 
+      <div id="botones">
         <button class="button" ><a style="color: white;" href="contacto.html">Contactar</a></button>
-        <button class="button" ><a style="color: white;" href="inicio.html">Volver</a></button>
+        <button class="button" ><a style="color: white;" href="portafolio.html">Volver</a></button>
+      </div>
+        
 
     </div>
 
   <hr>
 
-  <footer id="main-footer">
+  <footer id="pie-pagina">
     <div class="container">
       <p class="small">Francisco José Zea Guerrero 2021 &copy;</p>
       
