--- a/Portafolio/contacto.html
+++ b/Portafolio/contacto.html
@@ -4,48 +4,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+  
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos_mobile.css">
+
   <title>Portafolio-Francisco José</title>
 </head>
 <body>
   <header>
 
-    <nav id="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html"><img class="logo" src="logob1.png" alt="logob1"></a></h1>
-        <ul id="main-nav" class="txt-btn">
-            <li><a href="inicio.html">Portafolio</a></li>
-            <li><a class="current" href="contacto.html">Contacto</a></li>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <img id="logo" src="logob1.png" alt="logob1">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>   
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li> 
         </ul>
-      </div>
+      </div>  
     </nav>
-
-    <div id="cabecera">
-      <div class="cabecera-banner">
-        <h1 class="text-banner">Contacta conmigo</h1>
-      </div>
-    </div>
 
   </header>
 
+  <br>
+
   <section id="contacto">
 
-    <div class="box-contact">
+    <div class="apartado-contacto">
       <i class="fas fa-map-marker-alt fa-2x"></i>
       <h4>Zona de trabajo</h4>
       <p>Málaga</p>
       <p>Códigos postales: 29001/29190/29591</p>
     </div>
 
-    <div class="box-contact">
+    <div class="apartado-contacto">
       <i class="fas fa-mobile-alt fa-2x"></i>
-      <h4>Feléfonos</h4>
+      <h4>Teléfonos</h4>
       <p>Fijo: 952 59 34 67</p>
       <p>Movil: 608 34 81 00</p>
     </div>
 
-    <div class="box-contact">
+    <div class="apartado-contacto">
       <i class="fas fa-envelope fa-2x"></i>
       <h4>Email</h4>
       <p>Contacto: franciscozea2002@gmail.com</p>
