--- a/Portafolio/portafolio.html
+++ b/Portafolio/portafolio.html
@@ -5,21 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="mobile.css">
+  
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+
+  <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos_mobile.css">
+
   <title>Portafolio-Francisco José</title>
 </head>
 <body>
   <header>
 
-    <nav id="navbar">
-      <div class="container">
-        <h1 class="logo"><a href="index.html"><img class="logo" src="logob1.png" alt="logob1"></a></h1>
-        <ul id="main-nav" class="txt-btn">
-            <li><a class="current" href="inicio.html">Portafolio</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+      <img id="logo" src="logob1.png" alt="logob1">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>   
+          <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li> 
         </ul>
-      </div>
+      </div>  
     </nav>
       
     <div id="cabecera-home"></div>
@@ -29,45 +46,29 @@
   <section id="portafolio">
     <div class="container">
       <div class="portfolio-content">
-        <div class="box">
+        <div class="apartado">
           <a href="Pag1portafolio.html">
             <img src="fondoindex.jpg" alt="">
           </a>
         </div>
-        <div class="box">
+        <div class="apartado">
           <a href="Pag2portafolio.html">
             <img src="fondoindex.jpg" alt="">
           </a>
         </div>
-        <div class="box">
+        <div class="apartado">
           <a href="Pag3portafolio.html">
             <img src="fondoindex.jpg" alt="">
           </a>
         </div>
       </div>
-      <div class="portfolio-content">
-        <div class="box">
-          <a href="Pag4portafolio.html">
-            <img src="fondoindex.jpg" alt="">
-          </a>
-        </div>
-        <div class="box">
-          <a href="Pag5portafolio.html">
-            <img src="fondoindex.jpg" alt="">
-          </a>
-        </div>
-        <div class="box">
-          <a href="Pag6portafolio.html">
-            <img src="fondoindex.jpg" alt="">
-          </a>
-        </div>
       </div>
     </div>
   </section>
 
   <hr>
 
-  <footer id="main-footer">
+  <footer id="pie-pagina">
     <div class="container">
       <p class="small">Francisco José Zea Guerrero 2021 &copy;</p>
       
