--- a/Portafolio/Pag1portafolio.html
+++ b/Portafolio/Pag1portafolio.html
@@ -12,15 +12,15 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   
-  <link rel="stylesheet" href="estilos.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos_mobile.css">
+  <link rel="stylesheet" href="estilos/estilos.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos/estilos_mobile.css">
   
   <title>Portafolio-Francisco José</title>
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <img id="logo" src="logob1.png" alt="logob1">
+      <img id="logo" src="fotos/logob1.png" alt="logob1">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,7 +39,9 @@
       </div>  
     </nav>
 
-    <div id="cabecera-p1"></div>
+    <div id="cabecera-proyecto">
+      <img src="fotos/Infobox.png" alt="Infobox">
+    </div>
 
   </header>
 
@@ -48,25 +50,23 @@
     <div class="container">
 
       <div class="apartado-portfolio">
-        <h4>Project Description</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit obcaecati, hic delectus voluptatibus at velit perspiciatis iusto tenetur odit sunt nulla illum placeat officia incidunt culpa non maxime aliquid. Magni pariatur laborum amet magnam totam, eum esse fugit autem perferendis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae commodi laborum cumque ipsa rem voluptas nobis optio sapiente?</p>
+        <h4>Descripción del proyecto</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, ipsam iusto nostrum fuga non libero expedita totam, laudantium sit ducimus iste, at nobis! Itaque provident hic aut id. Accusantium, dolor.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum adipisci quia officia voluptatem tempore voluptatum cum dolore, illo praesentium assumenda vitae, tempora totam dolores perferendis eius alias, nostrum expedita!</p>
       </div>
 
       <div class="apartado-portfolio">
 
-        <h4>Project Info</h4>
+        <h4>Información del proyecto</h4>
         <ul>
-          <li><i class="far fa-user"></i> &nbsp;Client: Square Studio</li>
-          <li><i class="fas fa-pencil-ruler"></i> &nbsp;Skills: Branding</li>
-          <li><i class="far fa-calendar"></i> &nbsp;Date: Apr 28, 2020</li>
-          <li><i class="far fa-map"></i> &nbsp;Location: New York</li>
+          <li><i class="far fa-user"></i> &nbsp;Cliente: Infobox</li>
+          <li><i class="far fa-calendar"></i> &nbsp;Fecha: 28/04/2020</li>
+          <li><i class="far fa-map"></i> &nbsp;Lugar: Málaga</li>
         </ul>
 
       </div>
 
       <div id="botones">
-        <button class="button" ><a style="color: white;" href="contacto.html">Contactar</a></button>
         <button class="button" ><a style="color: white;" href="portafolio.html">Volver</a></button>
       </div>
         
@@ -77,7 +77,7 @@
 
   <footer id="pie-pagina">
     <div class="container">
-      <p class="small">Francisco José Zea Guerrero 2021 &copy;</p>
+      <p>Francisco José Zea Guerrero 2021 &copy;</p>
       
         <ul>
           <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
