--- a/Portafolio/Pag2portafolio.html
+++ b/Portafolio/Pag2portafolio.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,108 +11,67 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-
+  
   <link rel="stylesheet" href="estilos/estilos.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="estilos/estilos_mobile.css">
-
+  
   <title>Portafolio-Francisco José</title>
-
-  <!-- CSS arousel Bootstrap -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="estilos/carousel.css" rel="stylesheet">
-    
 </head>
 <body>
   <header>
-
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
       <img id="logo" src="fotos/logob1.png" alt="logob1">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
-
           <li class="nav-item">
             <a class="nav-link" href="index.html">Inicio</a>
           </li>   
-
           <li class="nav-item">
             <a class="nav-link" href="portafolio.html">Portafolio</a>
           </li>
-
           <li class="nav-item">
             <a class="nav-link" href="contacto.html">Contacto</a>
           </li> 
-
         </ul>
       </div>  
     </nav>
 
-    <main role="main">
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-
-      <div class="carousel-inner">
-
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="fotos/foto1.jpg" alt="First slide">
-        </div>
-
-        <div class="carousel-item">
-          <img class="d-block w-100" src="fotos/foto2.jpg" alt="Second slide">
-        </div>
-
-        <div class="carousel-item">
-          <img class="d-block w-100" src="fotos/foto3.jpg" alt="Third slide">
-        </div>
-
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
+    <div id="cabecera-proyecto">
+      <img src="fotos/taller.png" alt="Infobox">
     </div>
 
   </header>
 
   <section>
-    <div class="proyectos">
 
-      <div class="portfolio-content">
+    <div class="container">
 
-        <div class="apartado">
-          <a href="Pag1portafolio.html">
-            <img src="fotos/Infobox.png" alt="">
-          </a>
-        </div>
+      <div class="apartado-portfolio">
+        <h4>Descripción del proyecto</h4>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad, ipsam iusto nostrum fuga non libero expedita totam, laudantium sit ducimus iste, at nobis! Itaque provident hic aut id. Accusantium, dolor.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolorum adipisci quia officia voluptatem tempore voluptatum cum dolore, illo praesentium assumenda vitae, tempora totam dolores perferendis eius alias, nostrum expedita!</p>
+      </div>
 
-        <div class="apartado">
-          <a href="Pag2portafolio.html">
-            <img src="fotos/taller.png" alt="">
-          </a>
-        </div>
+      <div class="apartado-portfolio">
 
-        <div class="apartado">
-          <a href="Pag3portafolio.html">
-            <img src="fotos/taller2.png" alt="">
-          </a>
-        </div>
+        <h4>Información del proyecto</h4>
+        <ul>
+          <li><i class="far fa-user"></i> &nbsp;Cliente: Eurostar motor</li>
+          <li><i class="far fa-calendar"></i> &nbsp;Fecha: 25/10/2021</li>
+          <li><i class="far fa-map"></i> &nbsp;Lugar: Málaga</li>
+        </ul>
+
+      </div>
+
+      <div id="botones">
+        <button class="button" ><a style="color: white;" href="portafolio.html">Volver</a></button>
+      </div>
+        
 
     </div>
-  </section>
 
   <hr>
 
