--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -8,7 +8,7 @@
     <title>Portafolio-Francisco José</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="estilos/index.css">
 
 </head>
 <body>
