--- a/Portafolio/portafolio.html
+++ b/Portafolio/portafolio.html
@@ -62,15 +62,15 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <img class="d-block w-100" src="fotos/foto1.jpg" alt="First slide">
+          <img src="fotos/foto1.jpg" alt="First slide">
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100" src="fotos/foto2.jpg" alt="Second slide">
+          <img src="fotos/foto2.jpg" alt="Second slide">
         </div>
 
         <div class="carousel-item">
-          <img class="d-block w-100" src="fotos/foto3.jpg" alt="Third slide">
+          <img src="fotos/foto3.jpg" alt="Third slide">
         </div>
 
       <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
