--- a/Portafolio/contacto.html
+++ b/Portafolio/contacto.html
@@ -19,7 +19,7 @@
   <header>
 
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-      <img id="logo" src="fotos/logob1.png" alt="logob1">
+      <img id="logo" src="fotos/logob1.gif" alt="logob1">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
