--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Bootstrap Example</title>
+
+  <title>Landing page - Fran. J. Zea</title>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,19 +17,29 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
 
   <div class="cabecera">
 
-      <p>Resize this responsive page to see the effect! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos sapiente suscipit soluta eveniet deleniti unde? Maiores suscipit, voluptatem libero vel assumenda molestiae expedita! Sunt, eum. Asperiores quisquam exercitationem veritatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quis velit at exercitationem minus! Ea earum amet eum delectus a corporis consequatur, omnis repellat, veritatis dignissimos nulla iure soluta. Facilis!</p> 
+      <h1>Esta consola edición limitada puede ser tuya</h1>
 
-      <button class="button">Saber más</button>
-      <button class="button">Comprar</button>
+      <p>Compra hoy la tuya por solo 390€</p>
+
+      <button id="bot1" class="button">SABER MÁS</button>
+      <button id="bot2" class="button">COMPRAR</button>
 
   </div>
 
 
+  <div class="definition">
+
+    <p>Resize this responsive page to see the effect! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos sapiente suscipit soluta eveniet deleniti unde? Maiores suscipit, voluptatem libero vel assumenda molestiae expedita! Sunt, eum. Asperiores quisquam exercitationem veritatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quis velit at exercitationem minus! Ea earum amet eum delectus a corporis consequatur, omnis repellat, veritatis dignissimos nulla iure soluta. Facilis!</p> 
+  
+  </div>
+
+  
   <div class="definition">
 
     <p>Resize this responsive page to see the effect! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos sapiente suscipit soluta eveniet deleniti unde? Maiores suscipit, voluptatem libero vel assumenda molestiae expedita! Sunt, eum. Asperiores quisquam exercitationem veritatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quis velit at exercitationem minus! Ea earum amet eum delectus a corporis consequatur, omnis repellat, veritatis dignissimos nulla iure soluta. Facilis!</p> 
