--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" href="css/estilos.css">
 
+  <link rel="stylesheet" href="css/cuenta_atras.css">
+
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -27,8 +29,12 @@
 
       <p>Compra hoy la tuya por solo 390€</p>
 
-      <button id="bot1" class="button">SABER MÁS</button>
-      <button id="bot2" class="button">COMPRAR</button>
+      <div id="bots">
+
+        <button id="bot1" class="button">SABER MÁS</button>
+        <button id="bot2" class="button">COMPRAR</button>
+
+      </div>
 
   </div>
 
@@ -40,10 +46,43 @@
   </div>
 
   
-  <div class="definition">
+  <div class="Info2">
 
-    <p>Resize this responsive page to see the effect! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos sapiente suscipit soluta eveniet deleniti unde? Maiores suscipit, voluptatem libero vel assumenda molestiae expedita! Sunt, eum. Asperiores quisquam exercitationem veritatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quis velit at exercitationem minus! Ea earum amet eum delectus a corporis consequatur, omnis repellat, veritatis dignissimos nulla iure soluta. Facilis!</p> 
+    <div>
+
+      <h3>¿Hasta cuándo puedo comprar mi consola?</h3>
+
+      <div class="cont-temporizador">
+        <div class="bloque">
+            <div class="dias" id="dias">00</div>
+            <p>DÍAS</p>
+        </div>
+        <div class="bloque">
+            <div class="horas" id="horas">--</div>
+            <p>HORAS</p>
+        </div>
+        <div class="bloque">
+            <div class="minutos" id="minutos">--</div>
+            <p>MINUTOS</p>
+        </div>
+        <div class="bloque">
+            <div class="segundos" id="segundos">--</div>
+            <p>SEGUNDOS</p>
+        </div>
+      </div>
   
+      <script src="Js/cuenta_atras.js."></script>
+
+    </div>
+
+    <div>
+
+      <img src="fotos/xboxfotosinfondo.png" alt="">
+
+      <p>Quedan 80 unidades</p>
+
+    </div>
+
   </div>
 
     
