--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -48,40 +48,36 @@
   
   <div class="Info2">
 
-    <div>
+    <h3>¿Hasta cuándo puedo comprar mi consola?</h3>
 
-      <h3>¿Hasta cuándo puedo comprar mi consola?</h3>
-
-      <div class="cont-temporizador">
-        <div class="bloque">
-            <div class="dias" id="dias">00</div>
-            <p>DÍAS</p>
-        </div>
-        <div class="bloque">
-            <div class="horas" id="horas">--</div>
-            <p>HORAS</p>
-        </div>
-        <div class="bloque">
-            <div class="minutos" id="minutos">--</div>
-            <p>MINUTOS</p>
-        </div>
-        <div class="bloque">
-            <div class="segundos" id="segundos">--</div>
-            <p>SEGUNDOS</p>
-        </div>
+    <div class="cont-temporizador">
+      <div class="bloque">
+          <div class="dias" id="dias">00</div>
+          <p>DÍAS</p>
       </div>
-  
-      <script src="Js/cuenta_atras.js."></script>
-
+      <div class="bloque">
+          <div class="horas" id="horas">--</div>
+          <p>HORAS</p>
+      </div>
+      <div class="bloque">
+          <div class="minutos" id="minutos">--</div>
+          <p>MINUTOS</p>
+      </div>
+      <div class="bloque">
+          <div class="segundos" id="segundos">--</div>
+          <p>SEGUNDOS</p>
+      </div>
     </div>
 
-    <div>
+    <script src="Js/cuenta_atras.js."></script>
 
-      <img src="fotos/xboxfotosinfondo.png" alt="">
+    <p>Quedan <span>X</span> unidades</p>
 
-      <p>Quedan 80 unidades</p>
+    <script src="Js/num_unidades.js"></script>
 
-    </div>
+
+    <button id="bot3" class="button">COMPRAR</button>
+
 
   </div>
 
