--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -41,6 +41,8 @@
 
   <div class="definition">
 
+    <h3>Xbox one s edición limitada de forza horizon 3</h3>
+
     <p>Resize this responsive page to see the effect! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quos sapiente suscipit soluta eveniet deleniti unde? Maiores suscipit, voluptatem libero vel assumenda molestiae expedita! Sunt, eum. Asperiores quisquam exercitationem veritatis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error quis velit at exercitationem minus! Ea earum amet eum delectus a corporis consequatur, omnis repellat, veritatis dignissimos nulla iure soluta. Facilis!</p> 
   
   </div>
@@ -85,18 +87,18 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
+      <img src="fotos/xboxfotosinfondo.png" alt="consolasinfondo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
       <h3>Column 2</h3>
+      <img src="fotos/xboxfotosinfondo.png" alt="consolasinfondo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>        
+      <h3>Column 3</h3>   
+      <img id="fotojuego" src="fotos/11030290071602.png" alt="consolasinfondo">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
     </div>
   </div>
 
