--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -77,30 +77,31 @@
 
     <script src="Js/num_unidades.js"></script>
 
-
-    <button id="bot3" class="button">COMPRAR</button>
-
-
   </div>
 
-    
+
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
       <img src="fotos/xboxfotosinfondo.png" alt="consolasinfondo">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      
     </div>
     <div class="col-sm-4">
       <h3>Column 2</h3>
       <img src="fotos/xboxfotosinfondo.png" alt="consolasinfondo">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+
     </div>
     <div class="col-sm-4">
       <h3>Column 3</h3>   
       <img id="fotojuego" src="fotos/11030290071602.png" alt="consolasinfondo">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+
     </div>
   </div>
+
+  <div class="compra">
+    <button id="bot3" class="button">COMPRAR</button>
+  </div>
+
 
 
   <footer id="pie-pagina">
