--- a/web-medico/web-medico.html
+++ b/web-medico/web-medico.html
@@ -36,8 +36,6 @@
 
 </head>
 <body>
-
-    <!--<a href="#" id="Mostar">Mostar capa flotante</a>  <a href="#" id="Ocultar">Ocultar capa flotante</a>-->
     
     <header>
 
@@ -45,11 +43,15 @@
 
     </header>
 
-    <section id="capaflotante">
+    <section>
 
-        <p>dbern</p>
+        <p>En la actualidad las consultas médicas por videollamada, en algunas especialidades médicas, han dejado de ser una opción y se han convertido en una necesidad. Nuestra empresa está preparada para afrontar esta realidad.</p>
+        <p>Desde nuestra agenda podrás marcar las citas como presenciales o remotas (por videoconferencia).  Para las citas remotas se creará automáticamente una sala de videoconferencia y se notificará al paciente de la fecha/hora de la cita así como del enlace que debe usar para unirse a la videoconferencia en el momento acordado. El profesional, por su parte, podrá iniciar la llamada con un solo click desde la cita en su agenda.</p>
+        <p>Nuestra aplicación web también permite que los pacientes atendidos por videoconferencia puedan pagar cómodamente desde su casa con sus tarjetas de crédito. Este pago, además, se puede realizar por adelantado por parte del paciente al solicitar su visita desde nuestro portal de cita online.</p>
 
     </section>
+
+    <a href="#" id="Mostar">Consultas Online</a>
 
     <div class="capaflotante" id="capaflotante">
 
@@ -58,6 +60,8 @@
             <p>Capa flotante</p>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, in facere nisi, dolorem sequi nihil cum omnis a voluptatem ullam sapiente. Nobis cumque enim excepturi facere porro ratione doloremque architecto.</p>
+
+            <a href="#" id="Ocultar">Cerrar</a>
 
         </div>
 
