--- a/web-medico/web-medico.html
+++ b/web-medico/web-medico.html
@@ -51,6 +51,12 @@
 
     </section>
 
+    <section>
+
+        
+
+    </section>
+
     <a href="#" id="Mostar">Consultas Online</a>
 
     <div class="capaflotante" id="capaflotante">
@@ -60,6 +66,8 @@
             <p>Capa flotante</p>
 
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, in facere nisi, dolorem sequi nihil cum omnis a voluptatem ullam sapiente. Nobis cumque enim excepturi facere porro ratione doloremque architecto.</p>
+
+            <img src="" alt="foto1">
 
             <a href="#" id="Ocultar">Cerrar</a>
 
