--- a/Formularios/Formulario2/Formulario-2.html
+++ b/Formularios/Formulario2/Formulario-2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Formulario-1</title>
+    <title>Formulario-2</title>
 
     <link rel="stylesheet" href="F2-style.css">
 
@@ -15,7 +15,8 @@
     <form>
 
         <h2>Registration</h2>
-        <h4>New to Amazon.com? Register Below.</h4>
+
+        <h4>Personal information</h4>
         
         <spam class="letras">My name is:</spam>
         <input type="text" name="Nombre"><br>
@@ -23,22 +24,29 @@
         <spam class="letras">My e-mail address is:</spam>
         <input type="text" name="Apelidos"><br>
 
-        <spam class="letras">Type it again:</spam>
+        <spam class="letras">Type it again e-mail:</spam>
         <input type="text" name="Email"><br>
 
         <spam class="letras">My mobile phone number is:</spam>
+        <p>(Opcional)</p>
         <input type="text" name="Cantraseña"><br>
 
-        <h4>Protect your information with a password.</h4>
-        <h4>This will be your only Amazon.com password.</h4>
+        <h4>Identification data</h4>
 
         <spam class="letras">Enter a new password:</spam>
+        <p>Must be at least 8 characters </p>
         <input type="text" name="confiCantraseña"><br>
 
-        <spam class="letras">Type it again:</spam>
+        <spam class="letras">Type it again password:</spam>
         <input type="text" name="Email"><br>
 
-        <button>Create account</button> 
+
+
+        <div class="botones">  
+
+            <button id="create">Create account</button> 
+
+        </div> 
 
     </form>
 
